enhanced existing services and repos